# pyml

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml  requirements.txt
.github/workflows/: build.yml  build_and_test.yml  build_wheels.yml  release.yml
ci/: ReleaseBody.md
examples/svd_classifier/: main.py  svd_classifier.py
include/svd_classifier_specialization/: svd_classifier_specialization.hpp
python/: CMakeLists.txt  pyml.cpp
python/cpp/: ml.cpp  svd_classification_functions.cpp  svd_classifier.cpp
python/pyml/: __init__.py
scr/: CMakeLists.txt
tests/: test_svd_classifier_module_class.py  test_svd_classifier_module_functions.py
