[build-system]
requires = ["scikit-build-core >=0.4.3", "nanobind >=2.0.0"]
build-backend = "scikit_build_core.build"

[project]
name = "pyml"
version = "1.0.0"
description = "Small machine learning library."
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "Paweł Maciocha"},
]

[project.urls]
Homepage = "https://github.com/your/project"

[tool.scikit-build]
# Protect the configuration against future changes in scikit-build-core
minimum-version = "0.4"

# Setuptools-style build caching in a local directory
build-dir = "build/{wheel_tag}"

# Build stable ABI wheels for CPython 3.12+
wheel.py-api = "cp312"

[tool.cibuildwheel]
# Necessary to see build output from the actual compilation
build-verbosity = 1

# Run pytest to ensure that the package was correctly built
# test-command = "pytest {project}/tests"
# test-requires = "pytest"

[tool.cibuildwheel.macos.environment]
MACOSX_DEPLOYMENT_TARGET = "10.14"
